@@ -1,4 +1,5 @@
 [master]
+    - Removes option to hide the BibTeX Code tab in the entry editor.
     - Removes option to set a custom icon for the external file types. This is not possible anymore with the new icon font.
     - Added combo box in MassSetFieldAction to simplify selecting the correct field name
     - Fixes bug when having added and then removed a personal journal list, an exception is always shown on startup
